[gd_scene load_steps=3 format=3 uid="uid://34355t3nt3wx"]

[ext_resource type="Script" path="res://scripts/demon.gd" id="1_u4tlm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3c4g2"]
radius = 7.5

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_u4tlm")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_3c4g2")

[node name="Timer" type="Timer" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
